--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0",    
+    "bootstrap": "^5.2.0",
     "next": "^14.2.16",
     "oukilvai": "file:",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "eslint-config-next": "12.2.4",
+    "next-sitemap": "^4.2.3"
   }
 }
